--- a/Monopoly/app/src/main/res/values/styles.xml
+++ b/Monopoly/app/src/main/res/values/styles.xml
@@ -16,4 +16,8 @@
         <item name="strokeColor">#000</item>
         <item name="strokeWidth">4dp</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
