--- a/Monopoly/app/src/main/res/layout/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout/activity_game.xml
@@ -10,6 +10,8 @@
 
     <Button
         android:id="@+id/buttonThrowCubes"
+        android:background="#7d20f5"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -25,7 +27,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:contentDescription="@string/dices"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/cube2"
@@ -36,7 +38,7 @@
         android:id="@+id/cube2"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:contentDescription="@string/dices"
         app:layout_constraintRight_toRightOf="@+id/cube1"
@@ -184,6 +186,8 @@
 
     <Button
         android:id="@+id/sellButton"
+        android:background="#7d20f5"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sell"
@@ -202,26 +206,34 @@
 
     <Button
         android:id="@+id/YesButton"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
+        android:background="#7d20f5"
+        android:textColor="#ffffff"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
         android:text="Yes"
         android:clickable="false"
         android:visibility="invisible"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/DialogView"
         app:layout_constraintStart_toStartOf="@+id/DialogView" />
 
     <Button
         android:id="@+id/NoButton"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
+        android:background="#7d20f5"
+        android:textColor="#ffffff"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
         android:text="No"
         android:clickable="false"
         android:visibility="invisible"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/DialogView"
         app:layout_constraintEnd_toEndOf="@+id/DialogView" />
 
     <Button
         android:id="@+id/DialogView"
+        android:background="#7d20f5"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -234,6 +246,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />
 
+    <Button
+        android:id="@+id/buttonSuicide"
+        android:background="#7d20f5"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="Suicide"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
+        android:clickable="false"/>
 
 
 </android.support.constraint.ConstraintLayout>
