next step: working on scoreview

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="menuButton" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/tougle</item>
+        <item name="android:stateListAnimator">@drawable/animator</item>
+    </style>
+
+
 </resources>
