suicide button/mechanic

--- a/Monopoly/app/src/main/res/layout/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout/activity_game.xml
@@ -254,10 +254,11 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="Suicide"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="invisible"
-        android:clickable="false"/>
+        android:visibility="visible"
+        android:clickable="true"/>
 
 
 </android.support.constraint.ConstraintLayout>
