--- a/Monopoly/app/src/main/res/layout-land/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout-land/activity_game.xml
@@ -253,4 +253,17 @@
         app:layout_constraintStart_toStartOf="@+id/buttonThrowCubes"
         app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />
 
+    <Button
+        android:id="@+id/buttonSuicide"
+        android:background="#7d20f5"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="Suicide"
+        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="visible"
+        android:clickable="true"/>
+
 </android.support.constraint.ConstraintLayout>
