--- a/Monopoly/app/src/main/res/layout-land/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout-land/activity_game.xml
@@ -196,7 +196,7 @@
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sell"
+        android:text="@string/sell"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="@+id/cellCharge"
         app:layout_constraintTop_toBottomOf="@+id/cellCharge"
@@ -217,7 +217,7 @@
         android:textColor="#ffffff"
         android:layout_width="50dp"
         android:layout_height="35dp"
-        android:text="Yes"
+        android:text="@string/yesAnswer"
         android:clickable="false"
         android:visibility="invisible"
         android:layout_marginTop="5dp"
@@ -230,7 +230,7 @@
         android:textColor="#ffffff"
         android:layout_width="50dp"
         android:layout_height="35dp"
-        android:text="No"
+        android:text="@string/noAnswer"
         android:clickable="false"
         android:visibility="invisible"
         android:layout_marginTop="5dp"
@@ -246,8 +246,8 @@
         android:layout_marginTop="20dp"
         android:clickable="false"
         android:gravity="center"
-        android:text="Buy this cell?"
-        android:textSize="15dp"
+        android:text="@string/buyQuestion"
+        android:textSize="15sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/buttonThrowCubes"
         app:layout_constraintStart_toStartOf="@+id/buttonThrowCubes"
@@ -259,11 +259,10 @@
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="Suicide"
+        android:textSize="20sp"
+        android:text="@string/suicide"
         app:layout_constraintStart_toStartOf="@+id/VerticalGuideline"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="visible"
-        android:clickable="true"/>
+        android:visibility="visible" />
 
 </android.support.constraint.ConstraintLayout>
