--- a/Monopoly/app/src/main/res/layout/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout/activity_game.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/throw_dices"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />
@@ -190,7 +190,7 @@
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sell"
+        android:text="@string/sell"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellCharge"
         app:layout_constraintStart_toEndOf="@+id/VerticalGuideline"
@@ -210,7 +210,7 @@
         android:textColor="#ffffff"
         android:layout_width="50dp"
         android:layout_height="35dp"
-        android:text="Yes"
+        android:text="@string/yesAnswer"
         android:clickable="false"
         android:visibility="invisible"
         android:layout_marginTop="5dp"
@@ -223,7 +223,7 @@
         android:textColor="#ffffff"
         android:layout_width="50dp"
         android:layout_height="35dp"
-        android:text="No"
+        android:text="@string/noAnswer"
         android:clickable="false"
         android:visibility="invisible"
         android:layout_marginTop="5dp"
@@ -239,9 +239,9 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:clickable="false"
-        android:text="Buy this cell?"
+        android:text="@string/buyQuestion"
         android:visibility="invisible"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/UnderTopPartGuideline" />
@@ -252,13 +252,12 @@
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="Suicide"
+        android:textSize="20sp"
+        android:text="@string/suicide"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="visible"
-        android:clickable="true"/>
+        android:visibility="visible" />
 
 
 </android.support.constraint.ConstraintLayout>
