--- a/app/src/main/res/layout/activity_field.xml
+++ b/app/src/main/res/layout/activity_field.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="120dp"
-        android:text="@string/textview"
+        android:text="@string/textView1"
         android:textSize="25sp" />
 
     <TextView
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="170dp"
-        android:text="@string/textView"
+        android:text="@string/textView2"
         android:textSize="25sp" />
 
     <Button
