--- a/Monopoly/app/src/main/res/layout-v26/activity_amount_of_players.xml
+++ b/Monopoly/app/src/main/res/layout-v26/activity_amount_of_players.xml
@@ -39,7 +39,7 @@
         android:layout_below="@+id/buttonEnter"
         android:layout_marginTop="45dp"
         android:layout_toStartOf="@+id/buttonEnter"
-        android:text="@string/buttonBack" />
+        android:text="@string/menu" />
 
     <Button
         android:id="@+id/buttonStart"
