--- a/Monopoly/app/src/main/res/values/ids.xml
+++ b/Monopoly/app/src/main/res/values/ids.xml
@@ -1,51 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <item type="id" name="cell1" />
-        <item type="id" name="cell2" />
-        <item type="id" name="cell3" />
-        <item type="id" name="cell4" />
-        <item type="id" name="cell5" />
-        <item type="id" name="cell6" />
-        <item type="id" name="cell7" />
-        <item type="id" name="cell8" />
-        <item type="id" name="cell9" />
-        <item type="id" name="cell10" />
-        <item type="id" name="cell11" />
-        <item type="id" name="cell12" />
-        <item type="id" name="cell13" />
-        <item type="id" name="cell14" />
-        <item type="id" name="cell15" />
-        <item type="id" name="cell16" />
-        <item type="id" name="cell17" />
-        <item type="id" name="cell18" />
-        <item type="id" name="cell19" />
-        <item type="id" name="cell20" />
-        <item type="id" name="cell21" />
-        <item type="id" name="cell22" />
-        <item type="id" name="cell23" />
-        <item type="id" name="cell24" />
-        <item type="id" name="cell25" />
-        <item type="id" name="cell26" />
-        <item type="id" name="cell27" />
-        <item type="id" name="cell28" />
-        <item type="id" name="cell29" />
-        <item type="id" name="cell30" />
-        <item type="id" name="cell31" />
-        <item type="id" name="cell32" />
-        <item type="id" name="cell33" />
-        <item type="id" name="cell34" />
-        <item type="id" name="cell35" />
-        <item type="id" name="cell36" />
-        <item type="id" name="cell37" />
-        <item type="id" name="cell38" />
-        <item type="id" name="cell39" />
-        <item type="id" name="cell40" />
-        <item type="id" name="cell41" />
-        <item type="id" name="cell42" />
-        <item type="id" name="cell43" />
-        <item type="id" name="cell44" />
-        <item type="id" name="Player1" />
-        <item type="id" name="Player2" />
-        <item type="id" name="Player3" />
-        <item type="id" name="Player4" />
+    <item name="cell1" type="id" />
+    <item name="cell2" type="id" />
+    <item name="cell3" type="id" />
+    <item name="cell4" type="id" />
+    <item name="cell5" type="id" />
+    <item name="cell6" type="id" />
+    <item name="cell7" type="id" />
+    <item name="cell8" type="id" />
+    <item name="cell9" type="id" />
+    <item name="cell10" type="id" />
+    <item name="cell11" type="id" />
+    <item name="cell12" type="id" />
+    <item name="cell13" type="id" />
+    <item name="cell14" type="id" />
+    <item name="cell15" type="id" />
+    <item name="cell16" type="id" />
+    <item name="cell17" type="id" />
+    <item name="cell18" type="id" />
+    <item name="cell19" type="id" />
+    <item name="cell20" type="id" />
+    <item name="cell21" type="id" />
+    <item name="cell22" type="id" />
+    <item name="cell23" type="id" />
+    <item name="cell24" type="id" />
+    <item name="cell25" type="id" />
+    <item name="cell26" type="id" />
+    <item name="cell27" type="id" />
+    <item name="cell28" type="id" />
+    <item name="cell29" type="id" />
+    <item name="cell30" type="id" />
+    <item name="cell31" type="id" />
+    <item name="cell32" type="id" />
+    <item name="cell33" type="id" />
+    <item name="cell34" type="id" />
+    <item name="cell35" type="id" />
+    <item name="cell36" type="id" />
+    <item name="cell37" type="id" />
+    <item name="cell38" type="id" />
+    <item name="cell39" type="id" />
+    <item name="cell40" type="id" />
+    <item name="cell41" type="id" />
+    <item name="cell42" type="id" />
+    <item name="cell43" type="id" />
+    <item name="cell44" type="id" />
+    <item name="Player1" type="id" />
+    <item name="Player2" type="id" />
+    <item name="Player3" type="id" />
+    <item name="Player4" type="id" />
+    <string name="playerName">PlayerName</string>
+    <string name="aiButton">aiButton</string>
 </resources>
