--- a/app/src/main/res/layout-large/activity_menu.xml
+++ b/app/src/main/res/layout-large/activity_menu.xml
@@ -12,7 +12,7 @@
 
         <Button
             style="@style/menuButton"
-            android:layout_width="@dimen/button_width"
+            android:layout_width="@dimen/button_width_large"
             android:layout_height="wrap_content"
             android:onClick="onClickStartGame"
             android:text="@string/start_game">
@@ -20,7 +20,7 @@
 
         <Button
             style="@style/menuButton"
-            android:layout_width="@dimen/button_width"
+            android:layout_width="@dimen/button_width_large"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/btw_buttons"
             android:onClick="onClickRecords"
@@ -29,7 +29,7 @@
 
         <Button
             style="@style/menuButton"
-            android:layout_width="@dimen/button_width"
+            android:layout_width="@dimen/button_width_large"
             android:layout_marginTop="@dimen/btw_buttons"
             android:layout_height="wrap_content"
             android:onClick="onClickExit"
