--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/records"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,9 +12,7 @@
             android:id="@+id/list_records"
             android:layout_width="wrap_content"
             android:layout_gravity="clip_vertical"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="40dp"
-            tools:layout_editor_absoluteY="0dp">
+            android:layout_height="wrap_content">
         </ListView>
     </LinearLayout>
 
