--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -10,15 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="16sp"
+        android:textSize="@dimen/size_text"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/item_score"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="@dimen/start_item"
         android:gravity="center"
-        android:textSize="16sp" />
+        android:textSize="@dimen/size_text" />
 
 </RelativeLayout>
