--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,41 +11,52 @@
         android:id="@+id/aboutButton"
         android:layout_width="150dp"
         android:layout_height="55dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="384dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/bot"
         android:onClick="onClickAbout"
         android:text="@string/aboutButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/newGame"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/exit"
         android:layout_width="150dp"
         android:layout_height="55dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="452dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/bot"
         android:onClick="onClickExit"
         android:text="@string/exit"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/aboutButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/newGame"
         android:layout_width="150dp"
         android:layout_height="55dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/bot"
         android:onClick="onClickNewGame"
         android:text="@string/newGame"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.587" />
+
+
 </android.support.constraint.ConstraintLayout>
