--- a/app/src/main/res/layout/activiry_instruction.xml
+++ b/app/src/main/res/layout/activiry_instruction.xml
@@ -25,11 +25,11 @@
             android:layout_height="0dp"
             android:id="@+id/scrollView"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
 
-            app:layout_constraintBottom_toTopOf="@+id/back_button" app:layout_constraintTop_toTopOf="@+id/divider6">
+            app:layout_constraintTop_toTopOf="@+id/divider6"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:orientation="vertical">
             <TextView
@@ -39,13 +39,4 @@
                     android:id="@+id/textView"/>
         </LinearLayout>
     </ScrollView>
-    <Button
-            android:text="@string/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/back_button" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
 </android.support.constraint.ConstraintLayout>
