--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
 
     <color name="gray300" info="fieldBack">#E0E0E0</color>
     <color name="gray400" info="cell_border">#BDBDBD</color>
+    <color name="openCell" info="open_cell">#00000000</color>
+    <color name="closeCell" info="close_cell">#797979</color>
+    <color name="cell_border" info="border_of_cells">#252525</color>
 
 </resources>
