minor fixes from Code Inspection Fixed ~300 warnings!

--- a/app/src/main/res/layout/fragment_in_location.xml
+++ b/app/src/main/res/layout/fragment_in_location.xml
@@ -88,7 +88,9 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/fragment_in_location_content_difficultyTitle"
                     style="@style/BMRTextTitle"
