--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -1,70 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_game_landscape"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    tools:context=".GameActivity"
-    android:id="@+id/activity_game_landscape">
+    tools:context=".GameActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
 
         <GridLayout
             android:id="@+id/a_game_sudokuGrid"
             android:layout_width="350dp"
-            android:layout_height="350dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="30dp" />
+            android:layout_margin="10dp"
+            android:layout_weight="0" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
+
             <Button
                 android:id="@+id/a_game_check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
+                android:layout_weight="2"
                 android:backgroundTint="@android:color/holo_orange_light"
                 android:fontFamily="sans-serif-condensed"
-                android:layout_weight="2"
                 android:text="@string/checkButton"
                 android:textSize="20sp" />
+
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"/>
+                android:layout_weight="4" />
+
             <Chronometer
+                android:id="@+id/a_game_chrono"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:textColor="@android:color/white"
-                android:id="@+id/a_game_chrono"
-                android:layout_weight="0"
                 android:layout_margin="30dp"
-                android:gravity="center"/>
+                android:layout_weight="0"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="30sp" />
+
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"/>
+                android:layout_weight="3" />
+
             <Button
                 android:id="@+id/a_game_help"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
+                android:layout_weight="2"
                 android:backgroundTint="@android:color/holo_green_light"
                 android:fontFamily="sans-serif-condensed"
-                android:layout_weight="2"
                 android:text="@string/tip"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
         </LinearLayout>
-
 
 
     </LinearLayout>
