--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,22 +2,22 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#d81b60</color>
+    <color name="colorAccent">#3d5dc5</color>
     <color name="colorButtonBackground">#440009</color>
     <color name="colorButtonText">#E1E1FF</color>
 
     <color name="black_overlay">#66000000</color>
-    <color name="BMRButton_color_enabled">#1a1a3b</color>
+    <color name="BMRButton_color_enabled">#1b2946</color>
     <color name="BMRButton_color_disabled">#434f66</color>
     <color name="BMRButton_color_pressed" >#081028</color>
     <color name="BMRButton_small_color_pressed" >#152948</color>
-    <color name="BMRButton_small_color_disabled" >#6d7f9c</color>
-    <color name="BMRButton_small_color_enabled" >#09101d</color>
+    <color name="BMRButton_small_color_disabled" >#8d9eaa</color>
+    <color name="BMRButton_small_color_enabled" >#0f2637</color>
     <color name="BMRButton_stroke">#282c36</color>
     <color name="map_flatland">#a37f62</color>
     <color name="map_forest">#2b7b44</color>
     <color name="map_rock">#717a7e</color>
     <color name="map_default">#665a50</color>
     <color name="has_player">#f54343</color>
-
+    <color name="title_menu_color">#fef2041b</color>
 </resources>
