--- a/app/src/main/res/layout-land/game_layout.xml
+++ b/app/src/main/res/layout-land/game_layout.xml
@@ -10,7 +10,7 @@
     android:layout_marginRight="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
-    tools:context=".GameActivity">
+    tools:context=".A_GameActivity">
 
 
     <LinearLayout
