added screen rotation

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,24 +1,26 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
-    android:gravity="center"
-    android:orientation="horizontal">
+    android:columnCount="2"
+    android:rowCount="4">
 
     <TextView
         android:id="@+id/item_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:gravity="center"
         android:textSize="@dimen/size_text"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/item_score"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_marginStart="@dimen/start_item"
         android:gravity="center"
         android:textSize="@dimen/size_text" />
 
-</RelativeLayout>
+</GridLayout>
