--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,8 @@
     android:layout_gravity="top|center_horizontal"
     android:background="#0099cc"
     android:orientation="vertical"
-    tools:context=".AboutActivity">
+    tools:context=".AboutActivity"
+    android:id="@+id/activity_about">
 
     <LinearLayout
         android:layout_width="wrap_content"
