--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context=".MainMenuActivity">
+    tools:context=".MainMenuActivity"
+    android:id="@+id/activity_main_menu">
 
 
     <LinearLayout
