--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -5,6 +5,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:background="@color/list_background"
+    android:id="@+id/activity_records"
     >
     <TextView
         android:layout_width="match_parent"
