--- a/app/src/main/res/layout/records_table_layout.xml
+++ b/app/src/main/res/layout/records_table_layout.xml
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="SETTINGS" />
+                android:text="EASY" />
 
             <Button
                 android:id="@+id/middle_table_button"
@@ -74,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="RELOAD" />
+                android:text="MEDIUM" />
 
             <Button
                 android:id="@+id/easy_table_button"
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="RELOAD LAST" />
+                android:text="HARD" />
         </LinearLayout>
 
 
