--- a/app/src/main/res/layout-land/game_layout.xml
+++ b/app/src/main/res/layout-land/game_layout.xml
@@ -62,12 +62,12 @@
             android:layout_weight="1">
 
             <Button
-                android:id="@+id/settings_button"
+                android:id="@+id/menu_button"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="SETTINGS" />
+                android:text="@string/menu" />
 
             <Button
                 android:id="@+id/reload_button"
@@ -75,7 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="RELOAD" />
+                android:text="@string/reload" />
 
             <Button
                 android:id="@+id/reloadlast_button"
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="RELOAD LAST" />
+                android:text="@string/reload_last" />
         </LinearLayout>
 
         <GridLayout
@@ -92,7 +92,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
-            android:layout_marginEnd="2dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="2dp"
             android:layout_gravity="start"
             android:layout_weight="3">
