--- a/app/src/main/res/layout-land/menu_layout.xml
+++ b/app/src/main/res/layout-land/menu_layout.xml
@@ -11,13 +11,11 @@
 
         <LinearLayout
             android:id="@+id/butons_field"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="0"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -27,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="PLAY" />
+                android:text="@string/play" />
 
             <Button
                 android:id="@+id/records_button"
@@ -35,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="RECORDS" />
+                android:text="@string/records" />
 
             <Button
                 android:id="@+id/exit_button"
@@ -43,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="EXIT" />
+                android:text="@string/exit" />
         </LinearLayout>
     </LinearLayout>
 
